# swe-verified

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  input_config_schema.json  pyproject.toml  pyrightconfig.json  run.sh  setup.sh  sitecustomize.py  test_swebenchmultilingual.sh
.github/actions/build-select-file/: action.yml
.github/workflows/: build-commit0-images.yml  build-gaia-images.yml  build-multiswebench-images.yml  build-programbench-images.yml  build-swebench-images.yml  build-swebenchmultimodal-images.yml  build-swebenchpro-images.yml  build-swegym-images.yml  build-swesmith-images.yml  build-swtbench-images.yml  ghcr-retention.yml  precommit.yml  tests.yml
benchmarks/: __init__.py
benchmarks/commit0/: README.md  build_images.py  config.py  eval_infer.py  run_infer.py
benchmarks/commit0/prompts/: default.j2
benchmarks/gaia/: .gitignore  Dockerfile.gaia  README.md  __init__.py  build_images.py  config.py  eval_infer.py  run_infer.py  scorer.py  utils.py
benchmarks/harbor/: __init__.py  eval_infer.py  run_infer.py
benchmarks/hybridgym_depsearch/: README.md  __init__.py  config.py  eval_infer.py  run_infer.py
benchmarks/hybridgym_depsearch/prompts/: default.j2
benchmarks/hybridgym_funcgen/: README.md  __init__.py  config.py  eval_infer.py  run_infer.py
benchmarks/hybridgym_funcgen/prompts/: default.j2
benchmarks/hybridgym_funclocalize/: README.md  __init__.py  config.py  eval_infer.py  run_infer.py
benchmarks/hybridgym_funclocalize/prompts/: default.j2
benchmarks/hybridgym_issuelocalize/: README.md  __init__.py  config.py  eval_infer.py  run_infer.py
benchmarks/hybridgym_issuelocalize/prompts/: default.j2
benchmarks/multiswebench/: README.md  __init__.py  build_images.py  download_dataset.py  eval_infer.py  run_infer.py
benchmarks/multiswebench/prompts/: default.j2
benchmarks/multiswebench/scripts/data/: data_change.py
benchmarks/multiswebench/scripts/eval/: convert.py  update_multi_swe_bench_config.py
benchmarks/openagentsafety/: Dockerfile  README.MD  __init__.py  build_images.py  eval_infer.py  run_infer.py
benchmarks/openagentsafety/prompts/: default.j2
benchmarks/programbench/: README.md  config.py  eval_infer.py  run_infer.py
benchmarks/programbench/hooks/: check_compile_contract.sh  check_reference_diffs.sh
benchmarks/programbench/prompts/: default.j2
benchmarks/scripts/: summarize_build_manifests.py  validate_cfg.py
benchmarks/skillsbench/: README.md  __init__.py  config.py  eval_infer.py  run_infer.py
benchmarks/swebench/: README.md  apptainer_build.py  apptainer_eval.py  build_base_images.py  build_images.py  config.py  constants.py  eval_infer.py  run_infer.py
benchmarks/swebenchmultilingual/: Dockerfile.swebench-deps  README.md  __init__.py  build_images.py  config.py  constants.py  eval_infer.py  run_infer.py
benchmarks/swebenchmultilingual/prompts/: default.j2
benchmarks/swebenchmultimodal/: README.md  __init__.py  ambiguity_annotations.json  build_images.py  config.py  eval_infer.py  resolved_instances.txt  run_infer.py
benchmarks/swebenchmultimodal/prompts/: default.j2
benchmarks/swebenchpro/: README.md  build_images.py  config.py  constants.py  eval_infer.py  run_infer.py
benchmarks/swebenchpro/prompts/: default.j2
benchmarks/swefficiency/: README.md  __init__.py  config.py  constants.py  run_infer.py  workspace.py
benchmarks/swefficiency/prompts/: default.j2
benchmarks/swegym/: README.md  build_images.py
benchmarks/swesmith/: .env.example  README.md  build_images.py  config.py  constants.py  eval_infer.py  profiles.py  run_infer.py
benchmarks/swesmith/prompts/: default.j2
benchmarks/swtbench/: README.md  build_eval_env_images.py  config.py  eval_infer.py  image_utils.py  run_infer.py
benchmarks/swtbench/prompts/: default.j2
benchmarks/terminalbench/: README.md  __init__.py  config.py  eval_infer.py  run_infer.py
benchmarks/utils/: Dockerfile.agent-layer  Dockerfile.agent-layer-commit0  __init__.py  acp.py  agent_context.py  args_parser.py  build_manifest.py  build_utils.py  buildx_utils.py  console_logging.py  constants.py  conversation.py  critics.py  dataset.py  evaluation.py  evaluation_utils.py  exceptions.py  failure_classifier.py  fake_user_response.py  harbor.py  harbor_compat.py  image_utils.py  iterative.py  laminar.py  litellm_proxy.py  llm_config.py  modal_patches.py  modal_sitecustomize.py  models.py  patch_utils.py  registry_utils.py  report_costs.py  sitecustomize.py  swebench_registry_layout.py  tool_presets.py  version.py  worker_context.py
legacy/: README.md  __init__.py
scripts/: seed_artifact_registry.sh  swev_dood_hostfix.py
tests/: __init__.py  test_acp.py  test_aggregate_results.py  test_async_evaluation.py  test_build_manifest.py  test_commit0_eval_infer.py  test_commit0_report_summary.py  test_commit0_run_infer.py  test_condenser_config.py  test_conversation_logging.py  test_error_output_serialization.py  test_evaluation_proxy_cost.py  test_failure_classifier.py  test_harbor.py  test_harbor_compat.py  test_harbor_run_infer.py  test_image_utils.py  test_instance_timeout.py  test_iterative_resume.py  test_keyboard_interrupt.py  test_litellm_proxy.py  test_llm_config.py  test_metrics.py  test_multimodal_phased_build.py  test_openagentsafety_report.py  test_patch_utils_keep_test_files.py  test_phased_build.py  test_programbench.py  test_prompt_path.py  test_report_costs.py  test_skillsbench_eval_infer.py  test_skillsbench_run_infer.py  test_swebench_apptainer_build.py  test_swebench_apptainer_mount_dir.py  test_swebench_eval_infer.py  test_swebench_failure_patch_capture.py  test_swebench_registry_layout.py  test_swebenchmultimodal.py  test_swebenchpro.py  test_swtbench_build_eval_env_images.py  (+5 more)
